--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,38 @@
 {
-  "name": "sjbr/static-info-tables-pl",
+  "name": "leuchtfeuer/static-info-tables-pl",
+  "description": "Polish (pl) language pack for the Static Info Tables providing localized names for countries, currencies and so on.",
   "type": "typo3-cms-extension",
-  "description": "Polish (pl) language pack for the Static Info Tables providing localized names for countries, currencies and so on. TYPO3 extension.",
   "license": "GPL-2.0-or-later",
-  "keywords": [
-    "TYPO3 CMS",
-    "Static Info Tables"
-  ],
-  "support": {
-    "issues": "https://github.com/marketing-factory/static_info_tables_pl/issues"
-  },
+  "homepage": "https://www.Leuchtfeuer.com",
   "authors": [
     {
-      "name": "Simon Schmidt",
-      "role": "Developer"
+      "name": "Florian Wessels",
+      "role": "Developer",
+      "email": "f.wessels@Leuchtfeuer.com",
+      "homepage": "https://www.Leuchtfeuer.com"
     }
   ],
+  "support": {
+    "issues": "https://github.com/Leuchtfeuer/static-info-tables-pl/issues",
+    "source": "https://github.com/Leuchtfeuer/static-info-tables-pl",
+    "email": "dev@Leuchtfeuer.com"
+  },
   "replace": {
-    "static_info_tables_pl": "self.version",
     "typo3-ter/static-info-tables-pl": "self.version"
   },
   "require": {
-    "php": "^7.0",
-    "typo3/cms-core": "^8.7 || ^9.5",
-    "sjbr/static-info-tables": "^6.7"
+    "typo3/cms-core": "^9.5.17 || ^10.4.2",
+    "typo3/cms-extbase": "^9.5.17 || ^10.4.2",
+    "sjbr/static-info-tables": "^6.9"
+  },
+  "autoload": {
+    "psr-4": {
+      "Leuchtfeuer\\StaticInfoTablesPl\\": "Classes/"
+    }
+  },
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "static_info_tables_pl"
+    }
   }
 }
